azure-configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/products"
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/cart"
            backend:
              service:
                name: cart
                port:
                  number: 8888
          - pathType: Prefix
            path: "/users"
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - pathType: Prefix
            path: "/api/orders"
            backend:
              service:
                name: order
                port:
                  number: 80
